# react-native-duckdb

./: .gitignore  README.md  RELEASE.md  bun.lockb  bun.md  package.json
.github/workflows/: release.yml  update-duckdb.yml
docs/: API.md  EXPO.md  README.md  bare-workflow.md  database-location.md  expo.md  extensions.md  fts.md  remote-data.md  streaming.md  transactions.md  types.md  vss.md
example/: Gemfile  app.json  babel.config.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
example/android/: gradle.properties  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/rnduckdbexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/drawable/: splash_screen.xml
example/android/app/src/main/res/values/: strings.xml  styles.xml
example/ios/: .xcode.env.local  Podfile
example/ios/RNDuckDBExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/RNDuckDBExample.xcodeproj/: project.pbxproj
example/ios/RNDuckDBExample.xcodeproj/xcshareddata/xcschemes/: RNDuckDBExample.xcscheme
example/src/: App.tsx
example/src/components/: ResultTable.tsx  SQLHighlighter.tsx  StatusBar.tsx  TestCategoryCard.tsx  TestResultRow.tsx
example/src/data/: books.json  datasets.ts
example/src/db/: queryStore.ts
example/src/navigation/: DatasetStack.tsx  ExplorerStack.tsx  QueryStack.tsx  TabNavigator.tsx  types.ts
example/src/screens/: AboutScreen.tsx  AppenderBenchmarkScreen.tsx  AttachDatabaseScreen.tsx  DatasetDetailScreen.tsx  DatasetExplorerScreen.tsx  ExplorerHomeScreen.tsx  FTSExplorerScreen.tsx  FileQueriesScreen.tsx  QueryHistoryScreen.tsx  QueryRunnerScreen.tsx  RemoteFilesScreen.tsx  StreamingDemoScreen.tsx  TestSuiteScreen.tsx  TestsScreen.tsx  TypeInspectorScreen.tsx  VSSExplorerScreen.tsx
example/src/testing/: TestRegistry.ts  TestRunner.ts  types.ts
example/src/tests/: appender.test.ts  benchmark.test.ts  build.test.ts  cancel.test.ts  columnar.test.ts  errors.test.ts  extensions.test.ts  filequery.test.ts  fts.test.ts  lifecycle.test.ts  namedparams.test.ts  paths.test.ts  profiling.test.ts  progress.test.ts  query.test.ts  remote.test.ts  streaming.test.ts  transaction.test.ts  types.test.ts  vss.test.ts
example/src/theme/: ThemeContext.tsx  colors.ts  index.ts
package/: RNDuckDB.podspec  nitro.json  package.json  react-native.config.js  tsconfig.build.json  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
package/android/duckdb-release-wrapper/: CMakeLists.txt  aligned_alloc_shim.h
package/android/src/main/: AndroidManifest.xml
package/android/src/main/kotlin/com/rnduckdb/: DocPathSetter.kt  RNDuckDBInitProvider.kt  RNDuckDBPackage.kt
package/cpp/: HybridAppender.cpp  HybridAppender.hpp  HybridDatabase.cpp  HybridDatabase.hpp  HybridDuckDB.cpp  HybridDuckDB.hpp  HybridPreparedStatement.cpp  HybridPreparedStatement.hpp  HybridQueryResult.cpp  HybridQueryResult.hpp  HybridStreamingResult.cpp  HybridStreamingResult.hpp  duckdb_includes.hpp  json_serializer.hpp  types.hpp  utils.hpp
package/ios/: OnLoad.mm
package/plugin/: tsconfig.json
package/plugin/src/: index.ts  types.ts  withAndroid.ts  withIos.ts
package/src/: DuckDBError.ts  appender.ts  index.ts  nitro.ts  streaming.ts  transaction.ts  types.ts
package/src/specs/: Appender.nitro.ts  Database.nitro.ts  DuckDB.nitro.ts  PreparedStatement.nitro.ts  QueryResult.nitro.ts  StreamingResult.nitro.ts
patches/: react-native-nitro-modules@0.33.5.patch
scripts/: build-duckdb-ios.sh  build-openssl-curl.sh  configure-extensions.js  download-duckdb.sh
